# mycode

./: Procfile  build.gradle  settings.gradle
cpp/: Makefile  run_solution.cpp  temp.cpp
cpp/EasySandbox/: README.md  execute.sh  test.cpp  untrustedExe
cpp/sandbox/: CMakeCache.txt  Makefile  README.md  build.sh  chown.cmake  cmake_install.cmake  install_manifest.txt  memusage.h  run_solution.cpp  safe.h  sandbox  setlimit.c  setlimit.h  setlimits.h
cpp/sandbox/platform/linux/: memusage.c  setlimits.c
src/main/c/: init.sh
src/main/c/sandbox/: .gitignore  CMakeLists.txt  error.c  error.h  memusage.h  run_solution  safe.c  sandbox.c  sandbox.h
src/main/cpp/: TestChecker.cpp  run_solution.cpp
src/main/java/ru/teamnull/mycode/: MycodeApplication.java  TestRunner.java
src/main/java/ru/teamnull/mycode/config/: WebConfig.java
src/main/java/ru/teamnull/mycode/controller/: CourseController.java  GroupController.java  GroupTaskController.java  StudentController.java  SubmissionController.java  TaskController.java  TestController.java  UserController.java  ValidationController.java
src/main/java/ru/teamnull/mycode/dto/: GroupTask.java  GroupsTask.java  TaskDto.java
src/main/java/ru/teamnull/mycode/entity/: CheckResult.java  Course.java  Error.java  Group.java  Node.java  NodeRequest.java  NodeType.java  Sample.java  Submission.java  Task.java  Test.java  TestResult.java  User.java  Validation.java
src/main/resources/: application-dev.yml  application.yml
src/test/java/ru/teamnull/mycode/: MycodeApplicationTests.java
(+42 files in other folders)
